sketch of VD-UCB

--- a/link_adaptation.ipynb
+++ b/link_adaptation.ipynb
@@ -45,6 +45,7 @@
     "from src.link_adaptation_agents import TrackingThompsonSamplingBandit, ThompsonSamplingBandit, OuterLoopLinkAdaptation, DiscountThompsonSamplingBandit\n",
     "from src.link_adaptation_agents import UpperConfidenceBoundBandit as UCB1Bandit\n",
     "from src.link_adaptation_agents import DiscountedUCBBandit as DUCB1Bandit\n",
+    "from src.link_adaptation_agents import VariableDiscountedUCBBandit as VDUCB1Bandit\n",
     "\n",
     "plt.rcParams.update({'font.size': 22, 'lines.linewidth' : 3})\n",
     "\n",
@@ -337,7 +338,10 @@
     "    ducb_bandit = DUCB1Bandit(nrof_rates, nrof_cqi, packet_sizes, confidence_level=2, alpha=2, gamma=0.25)\n",
     "    ducb_bandit.gamma = 0.25\n",
     "    ducb_rates, ducb_acks, ducb_tputs = run_experiment_for_agent(ducb_bandit, nrof_ttis, channel_quality_indices, packet_acks, cqi_delay)\n",
-    "    \n",
+    "\n",
+    "    # Variable Discounted UCB (VD-UCB)\n",
+    "    vducb_bandit = VDUCB1Bandit(nrof_rates, nrof_cqi, packet_sizes, confidence_level=2, alpha=2, gamma=0.25)\n",
+    "    vducb_rates, vducb_acks, vducb_tputs = run_experiment_for_agent(vducb_bandit, nrof_ttis, channel_quality_indices, packet_acks, cqi_delay)\n",
     "    \n",
     "    return ( olla_rates, olla_acks, olla_tputs, \n",
     "             bayesla_rates, bayesla_acks, bayesla_tputs, \n",
@@ -345,6 +349,7 @@
     "             dts_rates, dts_acks, dts_tputs,\n",
     "             ucb1_rates, ucb1_acks, ucb1_tputs,\n",
     "             ducb_rates, ducb_acks, ducb_tputs,\n",
+    "             vducb_rates, vducb_acks, vducb_tputs,\n",
     "             packet_error_probabilities, channel_quality_indices)\n",
     "            #  error_stationary, cqi_stationary)"
    ]
@@ -388,6 +393,10 @@
     "ducb_mcs = []\n",
     "ducb_ack = []\n",
     "ducb_tput = []\n",
+    "\n",
+    "vducb_mcs = []\n",
+    "vducb_ack = []\n",
+    "vducb_tput = []\n",
     "\n",
     "# RAY: The following line runs the Ray-packaged method. To avoid using Ray, comment out the next line and uncomment\n",
     "# the line that immediately follows it in order to run the experiments.\n",
@@ -452,7 +461,11 @@
     "\n",
     "    ducb_mcs.append( res[15] )\n",
     "    ducb_ack.append( res[16] )\n",
-    "    ducb_tput.append( res[17] )"
+    "    ducb_tput.append( res[17] )\n",
+    "\n",
+    "    vducb_mcs.append( res[18] )\n",
+    "    vducb_ack.append( res[19] )\n",
+    "    vducb_tput.append( res[20] )"
    ]
   },
   {
@@ -625,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,12 +647,13 @@
     "        'TrackBayesLA': ([], Trackbayesla_ack, Trackbayesla_tput),\n",
     "        'dTS': ([], dts_ack, dts_tput),\n",
     "        'UCB1': ([], ucb1_ack, ucb1_tput),\n",
-    "        'D-UCB': ([], ducb_ack, ducb_tput)}"
+    "        'D-UCB': ([], ducb_ack, ducb_tput),\n",
+    "        'VD-UCB': ([], vducb_ack, vducb_tput)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
