D-UCB bug again, and disabled VD-UCB

--- a/link_adaptation.ipynb
+++ b/link_adaptation.ipynb
@@ -331,16 +331,16 @@
     "    dts_rates, dts_acks, dts_tputs = run_experiment_for_agent(dts_bandit, nrof_ttis, channel_quality_indices, packet_acks, cqi_delay)\n",
     "\n",
     "    # Upper Confidence Bound (UCB1)\n",
-    "    ucb_bandit = UCB1Bandit(nrof_rates, nrof_cqi, packet_sizes, confidence_level=2, alpha=2)\n",
+    "    ucb_bandit = UCB1Bandit(nrof_rates, nrof_cqi, packet_sizes)\n",
     "    ucb1_rates, ucb1_acks, ucb1_tputs = run_experiment_for_agent(ucb_bandit, nrof_ttis, channel_quality_indices, packet_acks, cqi_delay)\n",
     "    \n",
     "    # Discounted UCB (D-UCB) is buggy\n",
-    "    ducb_bandit = DUCB1Bandit(nrof_rates, nrof_cqi, packet_sizes, confidence_level=2, alpha=2, gamma=0.25)\n",
+    "    ducb_bandit = DUCB1Bandit(nrof_rates, nrof_cqi, packet_sizes, gamma=0.9999)\n",
     "    ducb_rates, ducb_acks, ducb_tputs = run_experiment_for_agent(ducb_bandit, nrof_ttis, channel_quality_indices, packet_acks, cqi_delay)\n",
     "\n",
     "    # Variable Discounted UCB (VD-UCB)\n",
-    "    vducb_bandit = VDUCB1Bandit(nrof_rates, nrof_cqi, packet_sizes, confidence_level=2, alpha=2, gamma=0.25)\n",
-    "    vducb_rates, vducb_acks, vducb_tputs = run_experiment_for_agent(vducb_bandit, nrof_ttis, channel_quality_indices, packet_acks, cqi_delay)\n",
+    "    # vducb_bandit = VDUCB1Bandit(nrof_rates, nrof_cqi, packet_sizes, confidence_level=2, alpha=2, gamma=0.25)\n",
+    "    # vducb_rates, vducb_acks, vducb_tputs = run_experiment_for_agent(vducb_bandit, nrof_ttis, channel_quality_indices, packet_acks, cqi_delay)\n",
     "    \n",
     "    return ( olla_rates, olla_acks, olla_tputs, \n",
     "             bayesla_rates, bayesla_acks, bayesla_tputs, \n",
@@ -348,7 +348,7 @@
     "             dts_rates, dts_acks, dts_tputs,\n",
     "             ucb1_rates, ucb1_acks, ucb1_tputs,\n",
     "             ducb_rates, ducb_acks, ducb_tputs,\n",
-    "             vducb_rates, vducb_acks, vducb_tputs,\n",
+    "            #  vducb_rates, vducb_acks, vducb_tputs,\n",
     "             packet_error_probabilities, channel_quality_indices)"
    ]
   },
@@ -417,7 +417,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agents = [\"OLLA\", \"BayesLA\", \"TrackBayesLA\", \"dTS\", \"UCB1\", \"D-UCB\", \"VD-UCB\"]\n",
+    "agents = [\n",
+    "    \"OLLA\",\n",
+    "    \"BayesLA\",\n",
+    "    \"TrackBayesLA\",\n",
+    "    \"dTS\",\n",
+    "    \"UCB1\",\n",
+    "    \"D-UCB\"\n",
+    "    # \"VD-UCB\"\n",
+    "    ]\n",
     "results_dict = {}\n",
     "\n",
     "for i, agent in enumerate(agents):\n",
