sliding window UCB (SW-UCB)

--- a/link_adaptation.ipynb
+++ b/link_adaptation.ipynb
@@ -45,6 +45,7 @@
     "from src.link_adaptation_agents import TrackingThompsonSamplingBandit, ThompsonSamplingBandit, OuterLoopLinkAdaptation, DiscountThompsonSamplingBandit\n",
     "from src.link_adaptation_agents import UpperConfidenceBoundBandit as UCB1Bandit\n",
     "from src.link_adaptation_agents import DiscountedUCBBandit as DUCB1Bandit\n",
+    "from src.link_adaptation_agents import SlidingWindowUCBBandit as SWUCB1Bandit\n",
     "from src.link_adaptation_agents import VariableDiscountedUCBBandit as VDUCB1Bandit\n",
     "\n",
     "plt.rcParams.update({'font.size': 22, 'lines.linewidth' : 3})\n",
@@ -335,8 +336,13 @@
     "    ucb1_rates, ucb1_acks, ucb1_tputs = run_experiment_for_agent(ucb_bandit, nrof_ttis, channel_quality_indices, packet_acks, cqi_delay)\n",
     "    \n",
     "    # Discounted UCB (D-UCB) is buggy\n",
-    "    ducb_bandit = DUCB1Bandit(nrof_rates, nrof_cqi, packet_sizes, bler_bler_cqi, gamma=0.9999)\n",
+    "    # ducb_bandit = DUCB1Bandit(nrof_rates, nrof_cqi, packet_sizes, bler_bler_cqi, gamma=0.9999)\n",
+    "    ducb_bandit = SWUCB1Bandit(nrof_rates, nrof_cqi, packet_sizes, bler_bler_cqi, window_size=20)\n",
     "    ducb_rates, ducb_acks, ducb_tputs = run_experiment_for_agent(ducb_bandit, nrof_ttis, channel_quality_indices, packet_acks, cqi_delay)\n",
+    "\n",
+    "    # Sliding Window UCB (SW-UCB)\n",
+    "    swucb_bandit = SWUCB1Bandit(nrof_rates, nrof_cqi, packet_sizes, bler_bler_cqi, window_size=100)\n",
+    "    swucb_rates, swucb_acks, swucb_tputs = run_experiment_for_agent(swucb_bandit, nrof_ttis, channel_quality_indices, packet_acks, cqi_delay)\n",
     "\n",
     "    # Variable Discounted UCB (VD-UCB)\n",
     "    # vducb_bandit = VDUCB1Bandit(nrof_rates, nrof_cqi, packet_sizes, confidence_level=2, alpha=2, gamma=0.25)\n",
@@ -348,6 +354,7 @@
     "             dts_rates, dts_acks, dts_tputs,\n",
     "             ucb1_rates, ucb1_acks, ucb1_tputs,\n",
     "             ducb_rates, ducb_acks, ducb_tputs,\n",
+    "             swucb_rates, swucb_acks, swucb_tputs,\n",
     "            #  vducb_rates, vducb_acks, vducb_tputs,\n",
     "             packet_error_probabilities, channel_quality_indices)"
    ]
@@ -414,7 +421,9 @@
     "    \"TrackBayesLA\",\n",
     "    \"dTS\",\n",
     "    \"UCB1\",\n",
-    "    \"D-UCB\"\n",
+    "    # \"D-UCB\",\n",
+    "    \"SW-UCB (20)\",\n",
+    "    \"SW-UCB (100)\"\n",
     "    # \"VD-UCB\"\n",
     "    ]\n",
     "results_dict = {}\n",
